dist/1.0/bin/sample/retrieveUnpackaged/objects/COrder__c.object
<CustomObject>
    <fields>
        <fullName>Intercompany_Buisness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this order is done with few GTS&apos;es</description>
        <inlineHelpText>Determines if this order is done with few GTS&apos;es</inlineHelpText>
        <label>Intercompany Buisness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceDelivery__c</fullName>
        <description>Invoice Delivery Method</description>
        <inlineHelpText>Invoice Delivery Method</inlineHelpText>
        <label>Invoice Delivery</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Orders (Invoice Delivery)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceLanguage__c</fullName>
        <description>Language used in Invoice Document</description>
        <inlineHelpText>Language used in Invoice Document</inlineHelpText>
        <label>Invoice Language</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Orders (Invoice Language)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceLayout__c</fullName>
        <description>Invoice Document Layout Type</description>
        <inlineHelpText>Invoice Document Layout Type</inlineHelpText>
        <label>Invoice Layout</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Orders (Invoice Layout)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Email2__c</fullName>
        <description>Backup Email Address for Invoice</description>
        <inlineHelpText>Backup Email Address for Invoice</inlineHelpText>
        <label>Invoice Email (Backup)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Email__c</fullName>
        <description>Email Address for receiving Invoices</description>
        <inlineHelpText>Email Address for receiving Invoices</inlineHelpText>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Recipient__c</fullName>
        <description>PL Specific - Name of Invoice Recipient</description>
        <inlineHelpText>PL Specific - Name of Invoice Recipient</inlineHelpText>
        <label>Invoice Recipient</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicingAddress__c</fullName>
        <description>Invoicing Address for new Account</description>
        <inlineHelpText>Invoicing Address for new Account</inlineHelpText>
        <label>Invoicing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Reason__c</fullName>
        <description>Reason of Order creation</description>
        <inlineHelpText>Reason of Order creation</inlineHelpText>
        <label>Issue Reason</label>
        <picklist>
            <picklistValues>
                <fullName>New Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update / Change of Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastAction__c</fullName>
        <description>Last executed action (required for history tracking)</description>
        <inlineHelpText>Last executed action (required for history tracking)</inlineHelpText>
        <label>Last Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastOwner__c</fullName>
        <description>Stores information about previous owner of the Order</description>
        <inlineHelpText>Stores information about previous owner of the Order</inlineHelpText>
        <label>Last Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Comment_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Corresponds to checkbox &quot;Send notification email&quot; on Order Managment panel</description>
        <inlineHelpText>Corresponds to checkbox &quot;Send notification email&quot; on Order Managment panel</inlineHelpText>
        <label>Last Comment Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <description>Field storing last comment (required for notifications)</description>
        <inlineHelpText>Field storing last comment (required for notifications)</inlineHelpText>
        <label>Last Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Comment_is_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked if last comment was added as Public</description>
        <inlineHelpText>Marked if last comment was added as Public</inlineHelpText>
        <label>Last Comment is Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact_ID__c</fullName>
        <description>Extranet User (SFDC Contact ID) which has modified record. Only id due to lookup limit on Order</description>
        <inlineHelpText>Extranet User (SFDC Contact ID) which has modified record. Only id due to lookup limit on Order</inlineHelpText>
        <label>Last Modified by Extranet Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact_Name__c</fullName>
        <description>Extranet User (SFDC Contact Name) which has modified record. Name to be displayed in link.</description>
        <inlineHelpText>Extranet User (SFDC Contact Name) which has modified record. Name to be displayed in link.</inlineHelpText>
        <label>Last Modified by Extranet Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact__c</fullName>
        <description>Extranet User (SFDC Contact) which has modified record. Link instead of lookup due to limits reached</description>
        <formula>HYPERLINK(Last_Modified_By_Ext_Contact_ID__c , Last_Modified_By_Ext_Contact_Name__c )</formula>
        <inlineHelpText>Extranet User (SFDC Contact ) which has modified record</inlineHelpText>
        <label>Last Modified by Extranet Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Txt__c</fullName>
        <description>Extranet User (not represented in SFDC) which modified record</description>
        <inlineHelpText>Extranet User (not represented in SFDC) which modified record</inlineHelpText>
        <label>Last Modified by Extranet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>Indicates which Legal Entity of GTS should be used for this Billing Account</description>
        <inlineHelpText>Indicates which Legal Entity of GTS should be used for this Billing Account</inlineHelpText>
        <label>Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <description>Limit of payment for provided Account Number</description>
        <inlineHelpText>Limit of payment for provided Account Number</inlineHelpText>
        <label>Limit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_1__c</fullName>
        <description>First line for invoicing address</description>
        <inlineHelpText>First line for invoicing address</inlineHelpText>
        <label>1st Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2__c</fullName>
        <description>Second line for invoincing address</description>
        <inlineHelpText>Second line for invoincing address</inlineHelpText>
        <label>2nd Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_CBCT_SK__c</fullName>
        <description>Link to CBCT</description>
        <formula>IF ( Calculation_Number__c&lt;&gt;&quot;&quot;,
CASE( GTS_Location__c ,
&quot;GTS Poland&quot;, HYPERLINK(&quot; https://pl-bct.in.gtsce.com/restricted/showCalculation-&quot; &amp; Calculation_Number__c,&quot;Open CBCT&quot;), 
&quot;GTS Hungary&quot;, HYPERLINK(&quot; https://hu-bct.in.gtsce.com/restricted/showCalculation-&quot; &amp; Calculation_Number__c, &quot;Open CBCT&quot;), 
&quot;GTS Slovakia&quot;, HYPERLINK(&quot; https://sk-bct.in.gtsce.com/restricted/showCalculation-&quot; &amp; Calculation_Number__c , &quot;Open CBCT&quot;),
HYPERLINK(&quot; https://sk-bct.in.gtsce.com/restricted/showCalculation-&quot; &amp; Calculation_Number__c , &quot;Open CBCT&quot;)),&quot;No Calculation Number&quot;)</formula>
        <inlineHelpText>Link to CBCT</inlineHelpText>
        <label>Link to CBCT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_CBCT__c</fullName>
        <description>Link to CBCT</description>
        <formula>Request__r.CBCT_Calculation__c</formula>
        <inlineHelpText>Link to CBCT</inlineHelpText>
        <label>Link to CBCT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Master Order goups all related order i.e. in case of complex soultion in which its parts (Requests) should be delivered together</description>
        <inlineHelpText>Master Order goups all related order i.e. in case of complex soultion in which its parts (Requests) should be delivered together</inlineHelpText>
        <label>Master Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity_Type__c</fullName>
        <description>Indicates if Maturity of Payment should be counted from Invoicing Day or from Invoice Delivery</description>
        <inlineHelpText>Indicates if Maturity of Payment should be counted from Invoicing Day or from Invoice Delivery</inlineHelpText>
        <label>Maturity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoicing Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maturity_of_Payment__c</fullName>
        <description>Maturity of Payment in days</description>
        <inlineHelpText>Maturity of Payment in days</inlineHelpText>
        <label>Maturity of Payment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Service_Period__c</fullName>
        <description>Minimum time period in which customer is obliged to use the service, specified by contract.</description>
        <inlineHelpText>Minimum time period in which customer is obliged to use the service, specified by contract.</inlineHelpText>
        <label>Minimum Service Period [months]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price__c</fullName>
        <description>Sum of order lines Monthly Recurring Prices</description>
        <inlineHelpText>Sum of order lines Monthly Recurring Prices</inlineHelpText>
        <label>Monthly Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Billing_Account__c</fullName>
        <description>Technical field. Stores identifier of a Billing Account created in Provisioning Process</description>
        <inlineHelpText>Technical field. Stores identifier of a Billing Account created in Provisioning Process</inlineHelpText>
        <label>New Billing Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_circuits__c</fullName>
        <description>Specifies circuit number, chosen on related Request record (IS orders only)</description>
        <formula>Request__r.No_of_Circuits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies circuit number, chosen on related Request record (IS orders only)</inlineHelpText>
        <label>No. of circuits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price__c</fullName>
        <description>Non Recurring Prices sum of all related Order Lines</description>
        <inlineHelpText>Non Recurring Prices sum of all related Order Lines</inlineHelpText>
        <label>Non Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OE_Assignee__c</fullName>
        <description>Order Entry User assigned to the Order</description>
        <inlineHelpText>Order Entry User assigned to the Order</inlineHelpText>
        <label>OE Assignee</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offnet_onnet__c</fullName>
        <label>Network</label>
        <picklist>
            <picklistValues>
                <fullName>OffNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnNet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OnHoldEnd__c</fullName>
        <description>Date/Time when last On Hold Status has ended</description>
        <inlineHelpText>Date/Time when last On Hold Status has ended</inlineHelpText>
        <label>On Hold End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OnHoldReason__c</fullName>
        <description>Reason of changing status to On Hold</description>
        <inlineHelpText>Reason of changing status to On Hold</inlineHelpText>
        <label>On Hold Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnHoldStart__c</fullName>
        <description>Date/Time when last On Hold status has been started</description>
        <inlineHelpText>Date/Time when last On Hold status has been started</inlineHelpText>
        <label>On Hold Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OnHold_Current__c</fullName>
        <description>Number of days for which order is in ON HOLD status</description>
        <formula>IF(ISPICKVAL(Status__c, &apos;On Hold&apos;), NOW()- OnHoldStart__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days for which order is in ON HOLD status</inlineHelpText>
        <label>On Hold Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnHold_Previous__c</fullName>
        <description>Stores durations of previous on holds</description>
        <inlineHelpText>Stores durations of previous on holds</inlineHelpText>
        <label>On Hold Previous</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnHold_Total__c</fullName>
        <description>Sum of all days in which order has been in ON HOLD status</description>
        <formula>OnHold_Current__c +  OnHold_Previous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all days in which order has been in ON HOLD status</inlineHelpText>
        <label>On Hold Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Opex Monthly fees sum of all related Order Lines</description>
        <inlineHelpText>Opex Monthly fees sum of all related Order Lines</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <description>Opex One-off fees sum of all related Order Lines</description>
        <inlineHelpText>Opex One-off fees sum of all related Order Lines</inlineHelpText>
        <label>Opex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Category__c</fullName>
        <description>Request&apos;s Opportunity category</description>
        <formula>Request__r.Opportunity_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Request&apos;s Opportunity category</inlineHelpText>
        <label>Opportunity Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Link to Request&apos;s Opportunity</description>
        <formula>HYPERLINK(&apos;/&apos;+ Request__r.Opportunity_del__c, Request__r.Opportunity_del__r.Name, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Request&apos;s Opportunity</inlineHelpText>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>Opportunity Owner Email required for notification.</description>
        <inlineHelpText>Opportunity Owner Email required for notification.</inlineHelpText>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>Id of Opportunity Owner. Used fot comparion of Opp. Owner creator of Order.</description>
        <inlineHelpText>Id of Opportunity Owner. Used fot comparion of Opp. Owner creator of Order.</inlineHelpText>
        <label>Opportunity Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_PLT__c</fullName>
        <description>Added by Martin Slaby, 2011-08-12 14:56 without any descr.</description>
        <label>Opportunity name (PLT)</label>
        <length>164</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>Stage of related Opportunity. Required for blocking edit possibility for Closed Won Opportunites</description>
        <inlineHelpText>Stage of related Opportunity</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Points to related Opportunity</description>
        <inlineHelpText>Points to related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderCloseDate__c</fullName>
        <description>When the last OrderLine is closed OCD of Order is set automatically with the same date.</description>
        <inlineHelpText>When the last OrderLine is closed OCD of Order is set automatically with the same date.</inlineHelpText>
        <label>Order Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderDuration__c</fullName>
        <description>Order time duration in days. Calculated as a period of time from order creation till its closing.</description>
        <formula>ClosedDate__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order time duration in days. Calculated as a period of time from order creation till its closing.</inlineHelpText>
        <label>Order Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderSigningDate__c</fullName>
        <description>Order Signing Date</description>
        <inlineHelpText>OSD - Order Signing Date, set manually by AM</inlineHelpText>
        <label>Order Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <description>Type of Order</description>
        <inlineHelpText>Type of Order</inlineHelpText>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Completed_Date__c</fullName>
        <description>Date when order was completed - used for reporting purpose.</description>
        <inlineHelpText>Date when order was completed - used for reporting purpose.</inlineHelpText>
        <label>Order Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Entry_Assignment__c</fullName>
        <description>Date and Time when Order was sent to Order Entry</description>
        <inlineHelpText>Date and Time when Order was sent to Order Entry</inlineHelpText>
        <label>Order Entry Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Owner_Email__c</fullName>
        <label>Order Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <description>Source of created Order like external system i.e Extranet</description>
        <inlineHelpText>Source of created Order like external system i.e Extranet</inlineHelpText>
        <label>Order Source</label>
        <picklist>
            <picklistValues>
                <fullName>Extranet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Partner participating in sales process as assigned on Opportunity level.</description>
        <formula>HYPERLINK(Partner_ID__c , Partner_Name__c )</formula>
        <inlineHelpText>Partner participating in sales process as assigned on Opportunity level.</inlineHelpText>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Email as defined on Partner Account assigned to Opportunity</description>
        <inlineHelpText>Email as defined on Partner Account assigned to Opportunity</inlineHelpText>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <description>Technical field. Id of Partner assigned on Opportunity level. Required to generat direct link to Partner Account on Order level</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Partner ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Partner Name to be displayed in link</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Partner Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <description>Invoice Payment Method Type</description>
        <inlineHelpText>Invoice Payment Method Type</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Orders (Payment Method)</relationshipLabel>
        <relationshipName>Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannedBillingConfigurationEnd__c</fullName>
        <description>Date, when Billing configuration is planned to end</description>
        <inlineHelpText>Date, when Billing configuration is planned to end</inlineHelpText>
        <label>Planned Billing Configuration End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedBillingConfigurationStart__c</fullName>
        <description>Date, when Billing configuration is planned to start</description>
        <inlineHelpText>Date, when Billing configuration is planned to start</inlineHelpText>
        <label>Planned Billing Configuration Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedBillingStop__c</fullName>
        <description>Date, when billing is planned to be stopped</description>
        <inlineHelpText>Date, when billing is planned to be stopped</inlineHelpText>
        <label>Planned Billing Stop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedDeinstallation__c</fullName>
        <description>Date, when deinstallation is planned</description>
        <inlineHelpText>Date, when deinstallation is planned</inlineHelpText>
        <label>Planned Deinstallation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedDisconnection__c</fullName>
        <description>Date, when disconnection is planned</description>
        <inlineHelpText>Date, when disconnection is planned</inlineHelpText>
        <label>Planned Disconnection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedProvisioningEnd__c</fullName>
        <description>Date, when Provisioning is expected to end</description>
        <inlineHelpText>Date, when Provisioning is expected to end</inlineHelpText>
        <label>Planned Provisioning End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedProvisioningStart__c</fullName>
        <description>Date, when Provisioning is expected to start</description>
        <inlineHelpText>Date, when Provisioning is expected to start</inlineHelpText>
        <label>Planned Provisioning Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Installation_Date__c</fullName>
        <description>Planned installation date after disconnection</description>
        <inlineHelpText>Planned installation date after disconnection</inlineHelpText>
        <label>Planned Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProcessingDuration_NoOH__c</fullName>
        <description>Order processing duration in days without periods when it has been ON HOLD or REJECTED status</description>
        <formula>ProcessingDuration__c - OnHold_Total__c - Rejected_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order processing duration in days without periods when it has been ON HOLD or REJECTED status</inlineHelpText>
        <label>Processing Duration (No OH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessingDuration__c</fullName>
        <description>Order processing time in days</description>
        <formula>IF( ISNULL(FinishedDate__c) , NOW() - AcceptedDate__c, FinishedDate__c - AcceptedDate__c) - Rejected_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order processing time in days</inlineHelpText>
        <label>Processing Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_PLT__c</fullName>
        <description>for platform licence use (added by Martin Slaby, 2011-08-12 14:55)</description>
        <label>Product (PLT)</label>
        <length>164</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Relation to Product object</description>
        <inlineHelpText>Selected Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProvisioningAcceptDate__c</fullName>
        <description>Provisioning Accept Date</description>
        <inlineHelpText>PAD - Provisioning Accept Date set automatically at Order when PM accepts the Order (the moment, when Project Manager is assigned for the first time).</inlineHelpText>
        <label>Provisioning Accept Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProvisioningEntryDate__c</fullName>
        <description>Provisioning Entry Date</description>
        <inlineHelpText>PED - Provisioning Entry Date set automatically when Order gets to ‘Awaiting Provisioning’ status</inlineHelpText>
        <label>Provisioning Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProvisioningStatus__c</fullName>
        <description>State of Provisioning</description>
        <inlineHelpText>State of Provisioning</inlineHelpText>
        <label>Provisioning Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Email_Alias__c</fullName>
        <description>Stores email alias to be used to send order comments in case of that no Project Manager is assigned. When PM is assigned then email is cleared from the field</description>
        <inlineHelpText>Stores email alias to be used to send order comments in case of that no Project Manager is assigned. When PM is assigned then email is cleared from the field</inlineHelpText>
        <label>Provisioning Email Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rejected_End__c</fullName>
        <description>Date &amp; Time when Order changed Status from Rejected</description>
        <inlineHelpText>Date &amp; Time when Order changed Status from Rejected</inlineHelpText>
        <label>Rejected End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_Last__c</fullName>
        <description>Length of period when Order was on Rejected Status for the last time</description>
        <formula>IF( ISPICKVAL( Status__c , &apos;Rejected&apos;), NOW() - Rejected_Start__c, Rejected_End__c - Rejected_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Length of period when Order was on Rejected Status for the last time</inlineHelpText>
        <label>Rejected Last</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejected_Owner__c</fullName>
        <description>Owner assigned when Status was Rejected</description>
        <inlineHelpText>Owner assigned when Status was Rejected</inlineHelpText>
        <label>Rejected Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Start__c</fullName>
        <description>Date &amp; Time when Order changed Status to Rejected</description>
        <inlineHelpText>Date &amp; Time when Order changed Status to Rejected</inlineHelpText>
        <label>Rejected Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_Status__c</fullName>
        <description>Status set when Order was rejected</description>
        <inlineHelpText>Status set when Order was rejected</inlineHelpText>
        <label>Rejected Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total time spent on Rejected Status</description>
        <inlineHelpText>Total time spent on Rejected Status</inlineHelpText>
        <label>Rejected Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>